# ot-harjoitustyo2026

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
Dokumentaatio/: arkkitehtuuri.md  changelog.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
Visailupeli/: .coveragerc  pyproject.toml  tasks.py
Visailupeli/Dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
Visailupeli/src/: main.py
Visailupeli/src/game_logic/: logic.py  quizzes.json  quizzes.py
Visailupeli/src/scores/: scores.json  scores.py
Visailupeli/src/tests/: test_menu.py  test_project.py
Visailupeli/src/ui/: game.py  gameover.py  menu.py  ui.py
laskarit/: gitlog.txt  viikko1.md
laskarit/viikko1/: komentorivi.txt  pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coveragerc
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
poetry-testi/: pyproject.toml
src/: index.py  pyproject.toml  test_menu.py
src/ot_harjoitustyo2026/: game.py  gameover.py  logic.py  login.py  main.py  menu.py  quizzes.py  register.py  ui.py
src/ot_harjoitustyo2026/game_logic/: game.py
src/ot_harjoitustyo2026/ui/: gameover.py  ui.py
src/tests/: test_menu.py
