name = "poetry-testi"
version = "0.1.0"
description = ""
authors = ["Emma Piittala <piittala@ad.helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.12"
cowsay = "^6.1"

[tool.poetry.dev-dependencies]
[tool.poetry]
package-mode = false
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
